[gd_scene load_steps=7 format=2]

[ext_resource path="res://levels/terrain.png" type="Texture" id=1]
[ext_resource path="res://levels/towers_walls_grass_light_2.png" type="Texture" id=2]
[ext_resource path="res://turrets/Iron_turret.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/Level_00.gd" type="Script" id=4]

[sub_resource type="TileSet" id=1]
0/name = "terrain.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 256, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "terrain.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 128, 256, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "terrain.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 256, 256, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "terrain.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 384, 256, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "terrain.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 512, 256, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "terrain.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 640, 256, 128, 128 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "terrain.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 768, 256, 128, 128 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "towers_walls_grass_light_2.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 128, 512, 128, 128 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "towers_walls_grass_light_2.png 8"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 256, 512, 128, 128 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "towers_walls_grass_light_2.png 9"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 384, 512, 128, 128 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -111.888, 1081.91, 0, 0, 0, 0, 258.187, 1082.58, -16.1512, 21.2999, 16.1512, -21.2999, 309.531, 1059.78, 0, 0, 0, 0, 321.533, 1006.79, 0, 0, 0, 0, 322.867, 578.208, 0, 0, 0, 0, 818.301, 583.573, 0, 0, 0, 0, 850.975, 941.731, 0, 0, 0, 0, 2105.9, 947.768, 0, 0, 0, 0, 2114.57, 586.256, 0, 0, 0, 0, 2661.34, 566.806 )
}

[node name="Level_00" type="Node2D"]
script = ExtResource( 4 )

[node name="Ground_tile" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 131071, 0, 0, 65536, 1, 0, 65537, 0, 0, 65538, 0, 0, 65539, 2, 0, 65540, 2, 0, 65541, 0, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 1, 0, 65553, 0, 0, 65554, 0, 0, 65555, -1073741815, 0, 65556, 8, 0, 196607, 0, 0, 131072, 0, 0, 131073, 2, 0, 131074, 2, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 1, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, -1073741816, 0, 131092, 2, 0, 262143, 0, 0, 196608, 2, 0, 196609, 1, 0, 196610, 0, 0, 196611, 0, 0, 196612, 1, 0, 196613, 0, 0, 196614, 2, 0, 196615, 0, 0, 196616, 0, 0, 196617, 2, 0, 196618, 2, 0, 196619, 0, 0, 196620, 0, 0, 196621, 2, 0, 196622, 2, 0, 196623, 0, 0, 196624, 2, 0, 196625, 1, 0, 196626, 2, 0, 196627, -1073741817, 0, 196628, 2, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 4, 0, 262147, -1610612733, 0, 262148, -1610612733, 0, 262149, -1610612733, 0, 262150, -1610612732, 0, 262151, 0, 0, 262152, 2, 0, 262153, 0, 0, 262154, 0, 0, 262155, 2, 0, 262156, 0, 0, 262157, 0, 0, 262158, 2, 0, 262159, 0, 0, 262160, 4, 0, 262161, -1610612733, 0, 262162, -1610612733, 0, 262163, -1610612733, 0, 262164, -1610612733, 0, 393215, 0, 0, 327680, 2, 0, 327681, 0, 0, 327682, 1610612739, 0, 327683, 0, 0, 327684, 0, 0, 327685, 1, 0, 327686, 1610612739, 0, 327687, 0, 0, 327688, 0, 0, 327689, 2, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 2, 0, 327696, 1610612739, 0, 327697, 1, 0, 327698, 0, 0, 327699, -1610612729, 0, 327700, 2, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 1610612739, 0, 393219, 0, 0, 393220, 2, 0, 393221, 0, 0, 393222, 1610612739, 0, 393223, 0, 0, 393224, 1, 0, 393225, 0, 0, 393226, 1, 0, 393227, 0, 0, 393228, 1, 0, 393229, 0, 0, 393230, 0, 0, 393231, 1, 0, 393232, 1610612739, 0, 393233, 0, 0, 393234, 2, 0, 393235, -1073741816, 0, 393236, 2, 0, 524287, -1073741824, 0, 458752, -1073741824, 0, 458753, -1073741824, 0, 458754, 1610612739, 0, 458755, 0, 0, 458756, 1, 0, 458757, 0, 0, 458758, -1073741820, 0, 458759, -1610612733, 0, 458760, -1610612733, 0, 458761, -1610612733, 0, 458762, -1610612733, 0, 458763, -1610612733, 0, 458764, -1610612733, 0, 458765, -1610612733, 0, 458766, -1610612733, 0, 458767, -1610612733, 0, 458768, 1610612740, 0, 458769, 0, 0, 458770, 1, 0, 458771, 1610612745, 0, 458772, 8, 0, 589823, -1073741821, 0, 524288, -1073741821, 0, 524289, -1073741821, 0, 524290, 1610612740, 0, 524291, 2, 0, 524292, 1, 0, 524293, 0, 0, 524294, 1, 0, 524295, 0, 0, 524296, 1, 0, 524297, 2, 0, 524298, 0, 0, 524299, 1, 0, 524300, 1, 0, 524301, 0, 0, 524302, 0, 0, 524303, 2, 0, 524304, 0, 0, 524305, 0, 0, 524306, 2, 0, 524307, 2, 0, 524308, 2, 0, 655359, 0, 0, 589824, 1, 0, 589825, 0, 0, 589826, 0, 0, 589827, 2, 0, 589828, 2, 0, 589829, 0, 0, 589830, 1, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 1, 0, 589836, 0, 0, 589837, 2, 0, 589838, 2, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 2, 0, 720895, 0, 0, 655360, 0, 0, 655361, 1, 0, 655362, 0, 0, 655363, 0, 0, 655364, 1, 0, 655365, 0, 0, 655366, 0, 0, 655367, 2, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 655379, 2, 0, 655380, 2, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0 )

[node name="Enemy_path" type="Path2D" parent="."]
position = Vector2( -0.752121, 6.43951 )
scale = Vector2( 0.500463, 0.497549 )
curve = SubResource( 2 )

[node name="Control" type="Control" parent="."]
margin_left = -1.0
margin_top = 6.0
margin_right = 1193.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_left = 40.0
margin_top = 10.0
margin_right = 1240.0
margin_bottom = 50.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_Label" type="Label" parent="Control/HBoxContainer"]
margin_left = 494.0
margin_top = 13.0
margin_right = 529.0
margin_bottom = 27.0
text = "Score"

[node name="Build_mode_button" type="Button" parent="Control/HBoxContainer"]
margin_left = 533.0
margin_right = 621.0
margin_bottom = 40.0
text = "Build_mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waves_label" type="Label" parent="Control/HBoxContainer"]
margin_left = 625.0
margin_top = 13.0
margin_right = 667.0
margin_bottom = 27.0
text = "Waves"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit_button" type="Button" parent="Control/HBoxContainer"]
margin_left = 671.0
margin_right = 706.0
margin_bottom = 40.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wave_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="spawn_timer" type="Timer" parent="."]

[node name="Iron_turret" parent="." instance=ExtResource( 3 )]
position = Vector2( 228.257, 472.533 )

[node name="Iron_turret2" parent="." instance=ExtResource( 3 )]
position = Vector2( 536.605, 385.769 )

[connection signal="timeout" from="wave_timer" to="." method="_on_wave_timer_timeout"]
